--- a/asset/css/top/styles.css
+++ b/asset/css/top/styles.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@100;300;400;500;700;800;900&display=swap");
+body {
+  font-family: 'M PLUS 1p', sans-serif;
+}
+
 .wrapper {
   padding: 15px;
   border: 1px solid #000;
