--- a/asset/css/top/styles.scss
+++ b/asset/css/top/styles.scss
@@ -10,8 +10,10 @@ body {
     h1 {
         text-align: center;
         margin: 15px;
+        font-weight: 800;
     }
     p {
         margin-bottom: 15px;
+        font-weight: 800;
     }
 }
