--- a/asset/css/top/styles.css
+++ b/asset/css/top/styles.css
@@ -3,6 +3,16 @@ body {
   font-family: 'M PLUS 1p', sans-serif;
 }
 
+.header {
+  position: fixed;
+  top: 0;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+}
+
 .wrapper {
   padding: 15px;
   margin: 0 auto;
