--- a/asset/css/top/styles.scss
+++ b/asset/css/top/styles.scss
@@ -2,6 +2,14 @@
 body {
     font-family: 'M PLUS 1p', sans-serif;
 }
+.header {
+    position: fixed;
+    top: 0;
+}
+.footer {
+    position: fixed;
+    bottom: 0;
+}
 .wrapper {
     padding: 15px;
     margin: 0 auto;
