--- a/asset/css/top/styles.scss
+++ b/asset/css/top/styles.scss
@@ -11,6 +11,8 @@ body {
     bottom: 0;
 }
 .wrapper {
+    position: relative;
+    top: 71px;
     padding: 15px;
     margin: 0 auto;
     max-width: 375px;
